--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a Software Developer.</p>
-      <h1>I'm From India.</h1>
-      <p>Details here...</p>
-      <h1>I love cooking and coding.</h1>
-      <p>Details here...</p>
-      <h1>Would be a job as a Web Developer.</h1>
-      <p>Details here...</p>
-      <h1>I live in Austin Texas</h1>
-      <p>Details here...</p>
-      <h1>It gives me happiness whenever I code</h1>
-      <p>Details here...</p>
+      <p>I am s Software Developer.</p>
+      <h1>Where I'm From</h1>
+      <p>I am from India</p>
+      <h1>What are your favorite hobbies?</h1>
+      <p>Playing with my doggo and spending time with Family.</p>
+      <h1>What's your dream job?</h1>
+      <p>To be in an amazing Software company..</p>
+      <h1>Where do you live?</h1>
+      <p>I live in Austin Texas</p>
+      <h1>Why do you want to be a web developer?</h1>
+      <p>I love when I Code.</p>
     </section>
 
     <footer id="footer">
